new proj/src/objects/R_Meeting__c.object
<CustomObject>
    <fields>
        <fullName>R_Table_Disposition__c</fullName>
        <label>R Table Disposition</label>
        <picklist>
            <picklistValues>
                <fullName>R0 Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R0 Denied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R1 Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R1 Denied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R2 Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R2 Denied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R3 Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R3 Denied</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>R_Type__c</fullName>
        <label>R Type</label>
        <picklist>
            <picklistValues>
                <fullName>0-1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0-2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0-3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P5.0 Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interim R2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interim R3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Final R3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Released</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RRC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Requested_Review_Duration_Mins__c</fullName>
        <label>Requested Review Duration (Mins)</label>
        <picklist>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Requestor_Country__c</fullName>
        <formula>CreatedBy.Country</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requestor&apos;s Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R_Meetings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Schedule_Timeslot__c</fullName>
        <label>Schedule Timeslot</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Needed__c</fullName>
        <label>Time Needed</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_Proposal_Requested__c</fullName>
        <label>Type of Proposal Requested</label>
        <picklist>
            <picklistValues>
                <fullName>Budget Level 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Budget Level 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Firm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pilot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Proposal Needed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R_Meetings3</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>R Meeting</label>
    <listViews>
        <fullName>All_R_Meetings</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>R_Type__c</columns>
        <columns>Meeting_Date__c</columns>
        <columns>Day_of_Week__c</columns>
        <columns>Schedule_Timeslot__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Approval_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All R Meetings</label>
    </listViews>
    <listViews>
        <fullName>All_R_Meetings_This_Week</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Opportunity_Buyer__c</columns>
        <columns>R_Type__c</columns>
        <columns>Day_of_Week__c</columns>
        <columns>Schedule_Timeslot__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Approved__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Meeting_Date__c</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>All R Meetings This Week</label>
    </listViews>
    <listViews>
        <fullName>Today_s_R_Meetings</fullName>
        <columns>NAME</columns>
        <columns>Schedule_Timeslot__c</columns>
        <columns>R_Type__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Opportunity_Buyer__c</columns>
        <columns>Approved__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Approval_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Meeting_Date__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s R Meetings</label>
    </listViews>
    <nameField>
        <displayFormat>RM-{00000}</displayFormat>
        <label>Meeting ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>R Meetings</pluralLabel>
    <recordTypes>
        <fullName>GE_ES_Basic</fullName>
        <active>true</active>
        <description>This Recordtype is being used for Energy Services</description>
        <label>GE ES Basic</label>
    </recordTypes>
    <recordTypes>
        <fullName>GE_ES_R1_Checklist_MCS</fullName>
        <active>true</active>
        <description>R1 Meeting minutes for MCS</description>
        <label>GE_ES_R1 Checklist-MCS</label>
    </recordTypes>
    <recordTypes>
        <fullName>GE_ES_R2_Checklist_MCS</fullName>
        <active>true</active>
        <description>R2 Meeting minutes for MCS</description>
        <label>GE_ES_R2 Checklist-MCS</label>
    </recordTypes>
    <recordTypes>
        <fullName>GE_OG_DP_R_Meeting</fullName>
        <active>true</active>
        <description>R Meeting for Oil&amp;Gas - (Drilling &amp; Production)</description>
        <label>GE OG D&amp;P R Meeting</label>
    </recordTypes>
    <recordTypes>
        <fullName>GE_OG_TM_R1_MoM_Template</fullName>
        <active>true</active>
        <description>This Record Type is used for Oil &amp; Gas</description>
        <label>GE OG TM R1 MoM Template</label>
    </recordTypes>
    <recordTypes>
        <fullName>GE_OG_TM_R2_R3_MoM_Template</fullName>
        <active>true</active>
        <description>This Record Type is used for Oil &amp; Gas</description>
        <label>GE OG TM R2-R3 MoM Template</label>
    </recordTypes>
    <recordTypes>
        <fullName>GE_OG_TM_R_Meeting</fullName>
        <active>true</active>
        <description>This is the initial recordtype for the Oil &amp; Gas</description>
        <label>GE OG TM R Meeting</label>
    </recordTypes>
    <recordTypes>
        <fullName>GE_PWNU_R_Meeting</fullName>
        <active>true</active>
        <description>It is used for P&amp;W Nuclear business</description>
        <label>GE PWNU R Meeting</label>
    </recordTypes>
    <recordTypes>
        <fullName>GE_PW_Renewables</fullName>
        <active>true</active>
        <label>GE PW Renewables</label>
    </recordTypes>
    <recordTypes>
        <fullName>GE_PW_WES_Basic</fullName>
        <active>true</active>
        <description>This Recordtype is being used for Water business</description>
        <label>GE PW WES Basic</label>
    </recordTypes>
    <recordTypes>
        <fullName>GE_PW_WES_Manager_Scheduled</fullName>
        <active>true</active>
        <description>To be used when manager needed to schedule R Meeting in R Meeting Calendar</description>
        <label>GE PW WES Manager Scheduled</label>
    </recordTypes>
    <recordTypes>
        <fullName>GE_PW_WES_Self_Schedule</fullName>
        <active>true</active>
        <description>Self Schedule (Used for Water) - Does not require any Approval</description>
        <label>GE PW WES Self Schedule</label>
    </recordTypes>
    <recordTypes>
        <fullName>GE_PW_Wind_R_Meeting</fullName>
        <active>true</active>
        <label>GE PW R Meeting</label>
    </recordTypes>
    <recordTypes>
        <fullName>R_Table_Review</fullName>
        <active>true</active>
        <description>R Meeting record type for Thermal and Gasification .</description>
        <label>R Table Review</label>
    </recordTypes>
    <recordTypes>
        <fullName>Val_Pack_R_Meeting</fullName>
        <active>true</active>
        <description>R Meeting minutes record Type for PGS Val Pack</description>
        <label>Val Pack R Meeting - PGS</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>